prototypes/v1/tests/elab/ok/record_lit/field_shorthand.pion
def mk_pair = fun(x: Int, y: Int) => {x, y};
