prototypes/v1/tests/elab/errors/pattern_matching/inexhaustive_fun_lit.pion
def foo = fun(false: Bool) => true;
